...
  late GiftDetailsController _controller;

  Future _publishGift() async {
    String? result = await _controller.publishGift();
    if (result == null) {
      ScaffoldMessenger.of(context)
          .showSnackBar(SnackBar(content: Text('Gift saved successfully')));
      Navigator.pop(context);
    } else if (result == 'FormValidationError') {
      return;
    } else {
      ScaffoldMessenger.of(context)
          .showSnackBar(SnackBar(content: Text(result)));
...
                      ),
                    ),
                    Padding(
                      padding: const EdgeInsets.all(16.0),
                      child: ElevatedButton(
                        onPressed: _publishGift,
                        child: Text('Save Gift'),
                      ),
                    ),
                  ],
                ),
              ),
            ),
...
